--- a/.env
+++ b/.env
@@ -2,10 +2,16 @@
 SECRET_KEY=(8s9+(et3y*e0qmtkrjmvn heroku:deployy+f0cd nutrition-recommender-appon3=7kv@b2$ltqm+jik4&2
 
 ## database parameters
-DATABASE_NAME=bxcjiwhkj6mdxkr36wk4
-DATABASE_USER=unx9b84kizp8wue0h4el
-DATABASE_PASSWORD=uDpVCjiYfvnlKnkaRHs0
-DATABASE_HOST=bxcjiwhkj6mdxkr36wk4-postgresql.services.clever-cloud.com
+#DATABASE_NAME=bxcjiwhkj6mdxkr36wk4
+#DATABASE_USER=unx9b84kizp8wue0h4el
+#DATABASE_PASSWORD=uDpVCjiYfvnlKnkaRHs0
+#DATABASE_HOST=bxcjiwhkj6mdxkr36wk4-postgresql.services.clever-cloud.com
+#DATABASE_PORT=5432
+
+DATABASE_NAME=mindful
+DATABASE_USER=qi
+DATABASE_PASSWORD=0513
+DATABASE_HOST=192.168.86.127
 DATABASE_PORT=5432
 
 ## user files storage (profile picture)
