--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/Users/qizhao/.local/share/virtualenvs/MindLog-Oucnlepr/bin/python"
+    "python.pythonPath": "/home/james/.local/share/virtualenvs/MindLog-smFLEpNY/bin/python"
 }
