--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
     "webpack-cli": "^3.3.12"
   },
   "dependencies": {
+    "antd": "^4.4.1",
     "axios": "^0.19.2",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-alert": "^7.0.1",
     "react-alert-template-basic": "^1.0.0",
-    "react-datetime-picker": "^3.0.2",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
